==> contiki-os/contiki/cpu/arm/stm32f103/usb-arch.c <==
#include <usb-arch.h>
#include <gpio.h>
#include <nvic.h>
#include <stdio.h>
#include <debug-uart.h>
#include <usb-stm32f103.h>
#define PRINTF(...) printf(__VA_ARGS__)
#define PRINTF(...)
#define USB_BASE             (APB1PERIPH_BASE + 0x5c00)
#define USB_MEM_BASE	     (APB1PERIPH_BASE + 0x6000)
#define USB_MEM_SIZE	     (512)
#define USB ((volatile USB_TypeDef *) USB_BASE)
#define USB_EP0_BUF_SIZE (2*CTRL_EP_SIZE)
#define USB_EP1_BUF_SIZE (2*USB_EP1_SIZE)
#define USB_EP2_BUF_SIZE (2*USB_EP2_SIZE)
#define USB_EP3_BUF_SIZE (2*USB_EP3_SIZE)
#define USB_EP4_BUF_SIZE (2*USB_EP4_SIZE)
#define USB_EP5_BUF_SIZE (2*USB_EP5_SIZE)
#define USB_EP6_BUF_SIZE (2*USB_EP6_SIZE)
#define USB_EP7_BUF_SIZE (2*USB_EP7_SIZE)
#define MAX_CTRL_DATA 128
#define ADDR_TX_0 ADDR_TX
#define ADDR_TX_1 ADDR_RX
#define COUNT_TX_0 COUNT_TX
#define COUNT_TX_1 COUNT_RX
#define ADDR_RX_0 ADDR_TX
#define ADDR_RX_1 ADDR_RX
#define COUNT_RX_0 COUNT_TX
#define COUNT_RX_1 COUNT_RX
#define USB_EPxR_EP_TYPE_BULK 0
#define USB_EPxR_EP_TYPE_CONTROL USB_EP0R_EP_TYPE_0
#define USB_EPxR_EP_TYPE_ISO USB_EP0R_EP_TYPE_1
#define USB_EPxR_EP_TYPE_INTERRUPT (USB_EP0R_EP_TYPE_1|USB_EP0R_EP_TYPE_0)
#define USB_EPxR_EP_DBL_BUF USB_EP0R_EP_KIND
#define USB_EPxR_EP_STATUS_OUT USB_EP0R_EP_KIND
#define USB_EPxR_STAT_RX_DISABLED 0
#define USB_EPxR_STAT_RX_STALL USB_EP0R_STAT_RX_0
#define USB_EPxR_STAT_RX_NAK USB_EP0R_STAT_RX_1
#define USB_EPxR_STAT_RX_VALID (USB_EP0R_STAT_RX_1|USB_EP0R_STAT_RX_0)
#define USB_EPxR_STAT_TX_DISABLED 0

void
usb_arch_setup(void)
{
  unsigned int i;
  RCC->APB1RSTR |= RCC_APB1RSTR_USBRST;
  RCC->APB2ENR |=  (RCC_APB2ENR_AFIOEN | RCC_APB2ENR_IOPAEN);
  RCC->APB1ENR |= (RCC_APB1ENR_USBEN);
  RCC->APB1RSTR &= ~RCC_APB1RSTR_USBRST;

  GPIO_CONF_OUTPUT_PORT(A,11,ALT_PUSH_PULL,50);
  GPIO_CONF_OUTPUT_PORT(A,12,ALT_PUSH_PULL,50);
  GPIO_CONF_OUTPUT_PORT(A,10, PUSH_PULL, 2);
  GPIOA->BSRR = GPIO_BSRR_BR10;

  /* Turn on analog part */
  USB->CNTR &= ~USB_CNTR_PDWN;
  
  for (i = 0; i < 24; i++) asm("nop"::); /* Wait at least 1us */
  /* Release reset */
  USB->CNTR &= ~USB_CNTR_FRES;
  /* Clear any interrupts */
  USB->ISTR = ~(USB_ISTR_PMAOVR |USB_ISTR_ERR | USB_ISTR_WKUP | USB_ISTR_SUSP
		| USB_ISTR_RESET);

  for(i = 0; i < USB_MAX_ENDPOINTS; i++) {
    usb_endpoints[i].flags = 0;
    usb_endpoints[i].event_process = 0;
  }
  /* Put buffer table at beginning of buffer memory */
  USB->BTABLE = 0;
  usb_arch_reset();
  GPIOA->BSRR = GPIO_BSRR_BS10;
  USB->CNTR |= (USB_CNTR_CTRM | USB_CNTR_PMAOVRM | USB_CNTR_ERRM
		| USB_CNTR_WKUPM| USB_CNTR_SUSPM | USB_CNTR_RESETM);
  NVIC_SET_PRIORITY(USB_LP_CAN_RX0_IRQChannel, 4);
  NVIC_ENABLE_INT(USB_LP_CAN_RX0_IRQChannel);
}

void
usb_arch_setup_control_endpoint(unsigned char addr)
{
  USB_HW_Buffer *buf_desc;
  unsigned int ei = EP_HW_NUM(addr);
  unsigned int epr;
  USBEndpoint *ep = EP_STRUCT(addr);
  usb_arch_setup_endpoint(addr);
  ep->flags |= USB_EP_FLAGS_TYPE_CONTROL;

  buf_desc = USB_EP_BUF_DESC(ei);
  buf_desc->ADDR_TX = USB_EP_BUF_OFFSET(ei);
  buf_desc->COUNT_TX = USB_EP_BUF_SIZE(ei)/2;
  buf_desc->ADDR_RX = USB_EP_BUF_OFFSET(ei) + USB_EP_BUF_SIZE(ei)/2;
  buf_desc->COUNT_RX = USB_EP_BUF_CAPACITY(USB_EP_BUF_SIZE(ei)/2);
  ep->xfer_size = USB_EP_BUF_SIZE(ei)/2;
  epr = USB->EPR[EP_HW_NUM(addr)];
  /* Clear interrupt flags */
  epr &= ~(USB_EP0R_CTR_RX | USB_EP0R_CTR_TX);
  /* NACK both directions */
  epr ^= USB_EPxR_STAT_RX_NAK | USB_EPxR_STAT_TX_NAK;
  /* Set control type */
  epr = ((epr & ~(USB_EP0R_EP_TYPE | USB_EP0R_EP_KIND))
	 | USB_EPxR_EP_TYPE_CONTROL);
  /* Set address */
  epr = ((epr & ~USB_EP0R_EA) | addr);
  USB->EPR[EP_HW_NUM(addr)] = epr; 
}

void
usb_arch_setup_bulk_endpoint(unsigned char addr)
{
  USB_HW_Buffer *buf_desc;
  unsigned int ei = EP_HW_NUM(addr);
  unsigned int epr;
  USBEndpoint *ep = EP_STRUCT(addr);
  usb_arch_setup_endpoint(addr);
  ep->flags |= USB_EP_FLAGS_TYPE_BULK;

  buf_desc = USB_EP_BUF_DESC(ei);
  buf_desc->ADDR_TX = USB_EP_BUF_OFFSET(ei);
  buf_desc->ADDR_RX = USB_EP_BUF_OFFSET(ei) + USB_EP_BUF_SIZE(ei)/2;
  epr = USB->EPR[ei];
  if (addr & 0x80) {
    /* IN */
    buf_desc->COUNT_TX_0 = 0;
    buf_desc->COUNT_TX_1 = 0;
    /* VALID transmission */
    epr ^= USB_EPxR_STAT_TX_VALID;
  } else {
    /* OUT */
    buf_desc->COUNT_RX_0 = USB_EP_BUF_CAPACITY(USB_EP_BUF_SIZE(ei)/2);
    buf_desc->COUNT_RX_1 = USB_EP_BUF_CAPACITY(USB_EP_BUF_SIZE(ei)/2);
    
    /* VALID reception  */
    epr ^= USB_EPxR_STAT_RX_VALID;
   }
  ep->xfer_size = USB_EP_BUF_SIZE(ei)/2;
  /* Clear interrupt flags */
  epr &= ~(USB_EP0R_CTR_RX | USB_EP0R_CTR_TX);
  /* Set bulk type */
  epr = ((epr & ~(USB_EP0R_EP_TYPE | USB_EP0R_EP_KIND))
	 | USB_EPxR_EP_TYPE_BULK | USB_EPxR_EP_DBL_BUF);
  /* Set address */
  epr = ((epr & ~USB_EP0R_EA) | addr);
  USB->EPR[ei] = epr;

}

void
usb_arch_setup_interrupt_endpoint(unsigned char addr)
{
  USB_HW_Buffer *buf_desc;
  unsigned int ei = EP_HW_NUM(addr);
  unsigned int epr;
  USBEndpoint *ep = EP_STRUCT(addr);
  usb_arch_setup_endpoint(addr);
  ep->flags |= USB_EP_FLAGS_TYPE_INTERRUPT;
  
  epr = USB->EPR[EP_HW_NUM(addr)];

  buf_desc = USB_EP_BUF_DESC(ei);
  if (addr & 0x80) {
    /* IN */
    buf_desc->ADDR_TX = USB_EP_BUF_OFFSET(ei);
    buf_desc->COUNT_TX = USB_EP_BUF_SIZE(ei);
    epr ^= USB_EPxR_STAT_TX_NAK;
  } else {
    /* OUT */
    buf_desc->ADDR_RX = USB_EP_BUF_OFFSET(ei);
    buf_desc->COUNT_RX = USB_EP_BUF_CAPACITY(USB_EP_BUF_SIZE(ei));
    epr ^= USB_EPxR_STAT_RX_NAK;
  }
  ep->xfer_size = USB_EP_BUF_SIZE(ei);
  /* Clear interrupt flags */
  epr &= ~(USB_EP0R_CTR_RX | USB_EP0R_CTR_TX);
  /* Set control type */
  epr = ((epr & ~(USB_EP0R_EP_TYPE | USB_EP0R_EP_KIND))
	 | USB_EPxR_EP_TYPE_INTERRUPT);
  /* Set address */
  epr = ((epr & ~USB_EP0R_EA) | addr);
  USB->EPR[EP_HW_NUM(addr)] = epr; 
}

void
usb_arch_disable_endpoint(uint8_t addr)
{
  unsigned int epr;
  USBEndpoint *ep = EP_STRUCT(addr);
  ep->flags &= ~USB_EP_FLAGS_ENABLED;
  
  epr = USB->EPR[EP_HW_NUM(addr)];

  epr ^= USB_EPxR_STAT_TX_DISABLED | USB_EPxR_STAT_RX_DISABLED;
  /* Clear interrupt flags */
  epr &= ~(USB_EP0R_CTR_RX | USB_EP0R_CTR_TX);
  USB->EPR[EP_HW_NUM(addr)] = epr; 
}

static void
read_hw_buffer(USBBuffer *buffer, unsigned int offset, unsigned int len)
{
#ifdef USB_STM32F103_ENABLE_ALT_COPY
  if (buffer->flags & USB_BUFFER_ARCH_ALT_COPY) {
    copy_from_hw_buffer(buffer, offset, len);
  } else
#endif
    {
      uint8_t *data = buffer->data;
      const uint32_t *hw_data = ((u32*)USB_MEM_BASE) + offset/2;
      buffer->data += len;
      if (offset & 1) {
	*data++ = *hw_data++ >> 8;
	len--;
      }
      while(len >= 2) {
	*((uint16_t*)data) = *hw_data++;
	data += 2;
	len -= 2;
      }
      if (len == 1) {
	*data++ = *hw_data;
      }
    }
}

void
write_hw_buffer(USBBuffer *buffer,unsigned int offset, unsigned int len)
{
#ifdef USB_STM32F103_ENABLE_ALT_COPY
  if (buffer->flags & USB_BUFFER_ARCH_ALT_COPY) {
    copy_to_hw_buffer(buffer, offset, len);
  } else
#endif    
    {
      const uint8_t *data;
      uint32_t *hw_data;
      if (len == 0) return;
      data = buffer->data;
      hw_data = ((u32*)USB_MEM_BASE) + offset/2;
      buffer->data += len;
      if (offset & 1) {
	*hw_data = (*hw_data & 0xff) | (*data++ << 8);
	hw_data++;
	len--;
      }
      while(len >= 2) {
	*hw_data++ = *((uint16_t*)data) ;
	data += 2;
	len -= 2;
      }
      if (len == 1) {
	*hw_data = *data++;
      }
    }
}

unsigned int
usb_get_ep_events(unsigned char addr)
{
  unsigned int e;
  unsigned int ei = EP_HW_NUM(addr);
  USB_DISABLE_INT;
  e = usb_endpoints[ei].events;
  usb_endpoints[ei].events = 0;
  USB_ENABLE_INT;
  return e;
}

void
usb_submit_recv_buffer(unsigned char ep_addr, USBBuffer *buffer)
{
  USBBuffer **tailp;
  USBEndpoint *ep = &usb_endpoints[EP_INDEX(ep_addr)];
  if (!(ep->flags & USB_EP_FLAGS_ENABLED)) return;
  /* PRINTF("buffer: %p\n", ep->buffer); */
  /* dbg_drain(); */
  USB_DISABLE_INT;
  tailp = (USBBuffer**)&ep->buffer;
  while(*tailp) {
    tailp = &(*tailp)->next;
  }
  *tailp = buffer;
  while(buffer) {
    buffer->flags |= USB_BUFFER_SUBMITTED;
    buffer = buffer->next;
  }
  start_transfer(ep);
  
  USB_ENABLE_INT;
}

void
usb_submit_xmit_buffer(unsigned char ep_addr, USBBuffer *buffer)
{
  USBBuffer **tailp;
  USBEndpoint *ep = &usb_endpoints[EP_INDEX(ep_addr)];
  if (!(ep->flags & USB_EP_FLAGS_ENABLED)) return;
  /* PRINTF("usb_submit_xmit_buffer %d\n", buffer->left); */
  USB_DISABLE_INT;
  tailp = (USBBuffer**)&ep->buffer;
  while(*tailp) {
    tailp = &(*tailp)->next;
  }
  *tailp = buffer;
  while(buffer) {
    buffer->flags |= USB_BUFFER_SUBMITTED | USB_BUFFER_IN;
    buffer = buffer->next;
  }
  start_transfer(ep);
  USB_ENABLE_INT;
}

void
usb_arch_discard_all_buffers(unsigned char ep_addr)
{
  uint32_t ints;
  USBBuffer *buffer;
  volatile USBEndpoint *ep = &usb_endpoints[EP_INDEX(ep_addr)];
  ints = usb_save_disable_int();
  buffer = ep->buffer;
  ep->buffer = NULL;
#if 0
  /* Set both directions to NAK */
  USB->EPR[EP_HW_NUM(ep_addr)] =
    EPR_TOGGLE_SET(USB->EPR[EP_HW_NUM(ep_addr)],
		   USB_EP0R_STAT_RX|USB_EP0R_STAT_TX,
		   USB_EPxR_STAT_TX_NAK| USB_EPxR_STAT_RX_NAK);
  ep->flags &= ~(USB_EP_FLAGS_RECV_PENDING|USB_EP_FLAGS_SETUP_PENDING);
#endif
  ep->flags &= ~(USB_EP_FLAGS_RECV_PENDING | USB_EP_FLAGS_SETUP_PENDING
		 | USB_EP_FLAGS_DOUBLE);
  usb_restore_int(ints);
  while(buffer) {
    buffer->flags &= ~USB_BUFFER_SUBMITTED;
    buffer = buffer->next;
  }
}

void
usb_arch_control_stall(unsigned char addr)
{
  if (EP_INDEX(addr) > USB_MAX_ENDPOINTS) return;
  uint32_t epr =  USB->EPR[EP_HW_NUM(addr)];
  USB->EPR[EP_HW_NUM(addr)] = EPR_TOGGLE_SET(epr,USB_EP0R_STAT_RX|USB_EP0R_STAT_TX, USB_EPxR_STAT_RX_STALL | USB_EPxR_STAT_TX_STALL);
}

void
usb_arch_halt_endpoint(unsigned char ep_addr, int halt)
{
  if (EP_INDEX(ep_addr) > USB_MAX_ENDPOINTS) return;
  if (!usb_endpoints[EP_INDEX(ep_addr)].flags & USB_EP_FLAGS_ENABLED) return;
  USB_DISABLE_INT;
  if (halt) {
    if (!(usb_endpoints[EP_INDEX(ep_addr)].status & 0x01)) {
      usb_endpoints[EP_INDEX(ep_addr)].status |= 0x01;
      if (ep_addr & 0x80) {
	stall_bulk_in(EP_HW_NUM(ep_addr));
      } else {
	stall_bulk_out(EP_HW_NUM(ep_addr));
      }
    }
  } else {
    USBEndpoint *ep = &usb_endpoints[EP_INDEX(ep_addr)];
    if (ep->status & 0x01) {
      ep->status &= ~0x01;
      PRINTF("HALT clear restart EPR: %04x %p %p\n",
	     (unsigned int)USB->EPR[EP_HW_NUM(ep_addr)],
	     ep->buffer, ep->buffer->next);
      /* Restore toggle state for double buffered endpoint */
      if (IS_BULK_EP(ep)) {
	volatile uint32_t *eprp = &USB->EPR[EP_HW_NUM(ep_addr)];
	if (ep_addr & 0x80) {
	  ep->flags &= ~(USB_EP_FLAGS_DOUBLE |USB_EP_FLAGS_TRANSMITTING);
	  
 	  *eprp =(EPR_TOGGLE_SET(*eprp,(USB_EP0R_STAT_TX | USB_EP0R_DTOG_TX 
					| USB_EPxR_SW_BUF_TX),
				 USB_EPxR_STAT_TX_VALID)); 
	} else {
	  ep->flags &= ~(USB_EP_FLAGS_DOUBLE | USB_EP_FLAGS_RECEIVING
			 | USB_EP_FLAGS_RECV_PENDING);

 	  *eprp =(EPR_TOGGLE_SET(*eprp,(USB_EP0R_STAT_RX | USB_EP0R_DTOG_RX 
					| USB_EPxR_SW_BUF_RX),
				 USB_EPxR_STAT_RX_VALID|USB_EPxR_SW_BUF_RX));
	  *eprp = EPR_INVARIANT(*eprp) | USB_EPxR_SW_BUF_RX;
	  
	}
      }
      /* Release HALT buffer */
      if (ep->buffer && (ep->buffer->flags & USB_BUFFER_HALT)) {
	ep->buffer->flags &= ~USB_BUFFER_SUBMITTED;
	if (ep->buffer->flags & USB_BUFFER_NOTIFY) {
	  notify_ep_process(ep,USB_EP_EVENT_NOTIFICATION);
	}
	ep->buffer = ep->buffer->next;
      }
      /* Restart transmission */
      start_transfer(&usb_endpoints[EP_INDEX(ep_addr)]);
      PRINTF("HALT clear restart EPR: %04x %p %p\n",
	     (unsigned int)USB->EPR[EP_HW_NUM(ep_addr)],
	     ep->buffer, ep->buffer->next);
      
    }
  }
  USB_ENABLE_INT;
}

void
usb_arch_set_address(unsigned char addr)
{
  USB->DADDR = 0x80 | addr;  
}

int 
usb_arch_send_pending(uint8_t ep_addr)
{
  return usb_endpoints[EP_INDEX(ep_addr)].flags & USB_EP_FLAGS_TRANSMITTING;
}
