==> contiki-os/contiki/cpu/cc2538/usb/usb-arch.c <==
#include "contiki.h"
#include "energest.h"
#include "usb-arch.h"
#include "usb-api.h"
#include "dev/usb-regs.h"
#include "dev/nvic.h"
#include "dev/gpio.h"
#include "dev/ioc.h"
#include "dev/udma.h"
#include "sys/clock.h"
#include "reg.h"
#include "dev/watchdog.h"
#include <stdint.h>
#define UDMA_SIZE_THRESHOLD 8
#define UDMA_TX_FLAGS (UDMA_CHCTL_ARBSIZE_128 | UDMA_CHCTL_XFERMODE_AUTO \
    | UDMA_CHCTL_SRCSIZE_8 | UDMA_CHCTL_DSTSIZE_8 \
    | UDMA_CHCTL_SRCINC_8 | UDMA_CHCTL_DSTINC_NONE)
#define UDMA_RX_FLAGS (UDMA_CHCTL_ARBSIZE_128 | UDMA_CHCTL_XFERMODE_AUTO \
    | UDMA_CHCTL_SRCSIZE_8 | UDMA_CHCTL_DSTSIZE_8 \
    | UDMA_CHCTL_SRCINC_NONE | UDMA_CHCTL_DSTINC_8)
#define EP_STATUS_IDLE                 0
#define EP_STATUS_RX                   1
#define EP_STATUS_TX                   2
#define USB_EP_FLAGS_TYPE_MASK      0x03
#define USB_EP_FLAGS_TYPE_BULK      0x00
#define USB_EP_FLAGS_TYPE_CONTROL   0x01
#define USB_EP_FLAGS_TYPE_ISO       0x02
#define USB_EP_FLAGS_TYPE_INTERRUPT 0x03
#define USB_EP_FLAGS_ENABLED 	      0x04
#define EP_TYPE(ep)          ((ep)->flags & USB_EP_FLAGS_TYPE_MASK)
#define IS_EP_TYPE(ep, type) (EP_TYPE(ep) == (type))
#define IS_CONTROL_EP(ep)    IS_EP_TYPE(ep, USB_EP_FLAGS_TYPE_CONTROL)
#define IS_BULK_EP(ep)       IS_EP_TYPE(ep, USB_EP_FLAGS_TYPE_BULK)
#define IS_INTERRUPT_EP(ep)  IS_EP_TYPE(ep, USB_EP_FLAGS_TYPE_INTERRUPT)
#define IS_ISO_EP(ep)        IS_EP_TYPE(ep, USB_EP_FLAGS_TYPE_ISO)
#define USBIIE_INEPxIE(x)    (1 << x)

unsigned int
usb_get_ep_events(uint8_t addr)
{
  volatile unsigned int e;
  uint8_t flag;
  usb_endpoint_t *ep = EP_STRUCT(addr);

  flag = nvic_interrupt_en_save(NVIC_INT_USB);

  e = ep->events;
  ep->events = 0;

  nvic_interrupt_en_restore(NVIC_INT_USB, flag);

  return e;
}

static void
read_hw_buffer(uint8_t *to, uint8_t hw_ep, unsigned int len)
{
  uint32_t fifo_addr = USB_F0 + (hw_ep << 3);

  if(USB_ARCH_CONF_DMA && len > UDMA_SIZE_THRESHOLD) {
    /* Set the transfer source and destination addresses */
    udma_set_channel_src(USB_ARCH_CONF_RX_DMA_CHAN, fifo_addr);
    udma_set_channel_dst(USB_ARCH_CONF_RX_DMA_CHAN,
                         (uint32_t)(to) + len - 1);

    /* Configure the control word */
    udma_set_channel_control_word(USB_ARCH_CONF_RX_DMA_CHAN,
                                  UDMA_RX_FLAGS | udma_xfer_size(len));

    /* Enabled the RF RX uDMA channel */
    udma_channel_enable(USB_ARCH_CONF_RX_DMA_CHAN);

    /* Trigger the uDMA transfer */
    udma_channel_sw_request(USB_ARCH_CONF_RX_DMA_CHAN);

    /* Wait for the transfer to complete. */
    while(udma_channel_get_mode(USB_ARCH_CONF_RX_DMA_CHAN));
  } else {
    while(len--) {
      *to++ = REG(fifo_addr);
    }
  }
}

static void
write_hw_buffer(uint8_t hw_ep, uint8_t *from, unsigned int len)
{
  uint32_t fifo_addr = USB_F0 + (hw_ep << 3);

  if(USB_ARCH_CONF_DMA && len > UDMA_SIZE_THRESHOLD) {
    /* Set the transfer source and destination addresses */
    udma_set_channel_src(USB_ARCH_CONF_TX_DMA_CHAN,
                         (uint32_t)(from) + len - 1);
    udma_set_channel_dst(USB_ARCH_CONF_TX_DMA_CHAN, fifo_addr);

    /* Configure the control word */
    udma_set_channel_control_word(USB_ARCH_CONF_TX_DMA_CHAN,
                                  UDMA_TX_FLAGS | udma_xfer_size(len));

    /* Enabled the RF RX uDMA channel */
    udma_channel_enable(USB_ARCH_CONF_TX_DMA_CHAN);

    /* Trigger the uDMA transfer */
    udma_channel_sw_request(USB_ARCH_CONF_TX_DMA_CHAN);

    /* Wait for the transfer to complete. */
    while(udma_channel_get_mode(USB_ARCH_CONF_TX_DMA_CHAN));
  } else {
    while(len--) {
      REG(fifo_addr) = *from++;
    }
  }
}

void
usb_arch_setup(void)
{
  uint8_t i;

  /* Switch on USB PLL & USB module */
  REG(USB_CTRL) = USB_CTRL_USB_EN | USB_CTRL_PLL_EN;

  /* Wait until USB PLL is stable */
  while(!(REG(USB_CTRL) & USB_CTRL_PLL_LOCKED));

  /* Enable pull-up on usb port */
  GPIO_SET_OUTPUT(USB_PULLUP_PORT, USB_PULLUP_PIN_MASK);
  REG((USB_PULLUP_PORT | GPIO_DATA) + (USB_PULLUP_PIN_MASK << 2)) = 1;

  for(i = 0; i < USB_MAX_ENDPOINTS; i++) {
    usb_endpoints[i].flags = 0;
    usb_endpoints[i].event_process = 0;
  }

  reset();

  /* Disable all EP interrupts, EP0 interrupt will be enabled later */
  REG(USB_IIE) = 0;
  REG(USB_OIE) = 0;

  /* Initialise the USB control structures */
  if(USB_ARCH_CONF_DMA) {
    /* Disable peripheral triggers for our channels */
    udma_channel_mask_set(USB_ARCH_CONF_RX_DMA_CHAN);
    udma_channel_mask_set(USB_ARCH_CONF_TX_DMA_CHAN);
  }

  nvic_interrupt_enable(NVIC_INT_USB);
}

void
usb_submit_recv_buffer(uint8_t addr, usb_buffer *buffer)
{
  usb_buffer **tailp;
  uint8_t flag;
  usb_endpoint_t *ep = EP_STRUCT(addr);

  if(!(ep->flags & USB_EP_FLAGS_ENABLED)) {
    return;
  }

  if(buffer->data == NULL && EP_HW_NUM(addr) == 0) {
    if(buffer->flags & USB_BUFFER_NOTIFY) {
      notify_ep_process(ep, USB_EP_EVENT_NOTIFICATION);
    }
    return;
  }

  flag = nvic_interrupt_en_save(NVIC_INT_USB);

  tailp = &ep->buffer;
  while(*tailp) {
    tailp = &(*tailp)->next;
  }
  *tailp = buffer;
  while(buffer) {
    buffer->flags |= USB_BUFFER_SUBMITTED;
    buffer = buffer->next;
  }

  REG(USB_INDEX) = EP_HW_NUM(addr);
  if(!EP_HW_NUM(ep->addr)) {
    if(REG(USB_CS0) & USB_CS0_OUTPKT_RDY) {
      ep0_interrupt_handler();
    }
  } else {
    if(REG(USB_CSOL) & USB_CSOL_OUTPKT_RDY) {
      out_ep_interrupt_handler(EP_HW_NUM(ep->addr));
    }
  }

  nvic_interrupt_en_restore(NVIC_INT_USB, flag);
}

void
usb_submit_xmit_buffer(uint8_t addr, usb_buffer *buffer)
{
  usb_buffer **tailp;
  uint8_t flag;
  uint8_t res;
  usb_endpoint_t *ep = EP_STRUCT(addr);

  if(!(ep->flags & USB_EP_FLAGS_ENABLED)) {
    return;
  }

  flag = nvic_interrupt_en_save(NVIC_INT_USB);

  if(EP_HW_NUM(addr) == 0) {
    if(buffer->data == NULL) {
      /* We are asked to send a STATUS packet.
       * But the USB hardware will do this automatically
       * as soon as we release the HW FIFO. */
      REG(USB_INDEX) = 0;
      REG(USB_CS0) = USB_CS0_CLR_OUTPKT_RDY | USB_CS0_DATA_END;
      notify_ep_process(ep, USB_EP_EVENT_NOTIFICATION);
      nvic_interrupt_en_restore(NVIC_INT_USB, flag);
      return;
    } else {
      /* Release the HW FIFO */
      REG(USB_INDEX) = 0;
      REG(USB_CS0) = USB_CS0_CLR_OUTPKT_RDY;
    }
  }

  tailp = &ep->buffer;
  while(*tailp) {
    tailp = &(*tailp)->next;
  }
  *tailp = buffer;
  while(buffer) {
    buffer->flags |= USB_BUFFER_SUBMITTED | USB_BUFFER_IN;
    buffer = buffer->next;
  }

  REG(USB_INDEX) = EP_HW_NUM(ep->addr);
  if(EP_HW_NUM(ep->addr)) {
    res = ep_tx(EP_HW_NUM(ep->addr));
  } else {
    res = ep0_tx();
  }

  nvic_interrupt_en_restore(NVIC_INT_USB, flag);

  if(res & USB_WRITE_NOTIFY) {
    notify_ep_process(ep, USB_EP_EVENT_NOTIFICATION);
  }
}

void
usb_arch_setup_control_endpoint(uint8_t addr)
{
  usb_endpoint_t *ep = EP_STRUCT(addr);

  ep->flags = USB_EP_FLAGS_TYPE_CONTROL;

  ep_setup(addr);
}

void
usb_arch_setup_bulk_endpoint(uint8_t addr)
{
  usb_endpoint_t *ep = EP_STRUCT(addr);

  ep->flags = USB_EP_FLAGS_TYPE_BULK;

  ep_setup(addr);
}

void
usb_arch_setup_interrupt_endpoint(uint8_t addr)
{
  usb_endpoint_t *ep = EP_STRUCT(addr);

  ep->flags = USB_EP_FLAGS_TYPE_INTERRUPT;

  ep_setup(addr);
}

void
usb_arch_disable_endpoint(uint8_t addr)
{
  uint8_t ei = EP_HW_NUM(addr);
  uint8_t flag;
  usb_endpoint_t *ep = EP_STRUCT(addr);

  ep->flags &= ~USB_EP_FLAGS_ENABLED;

  flag = nvic_interrupt_en_save(NVIC_INT_USB);

  REG(USB_INDEX) = ei;
  if(ei == 0) {
    ep0_dis();
  } else {
    if(addr & 0x80) {
      in_ep_dis(addr);
    } else {
      out_ep_dis(addr);
    }
  }
  nvic_interrupt_en_restore(NVIC_INT_USB, flag);
}

void
usb_arch_discard_all_buffers(uint8_t addr)
{
  usb_buffer *buffer;
  uint8_t flag;
  volatile usb_endpoint_t *ep = EP_STRUCT(addr);

  flag = nvic_interrupt_en_save(NVIC_INT_USB);

  buffer = ep->buffer;
  ep->buffer = NULL;
  nvic_interrupt_en_restore(NVIC_INT_USB, flag);

  while(buffer) {
    buffer->flags &= ~USB_BUFFER_SUBMITTED;
    buffer = buffer->next;
  }
}

void
usb_arch_control_stall(uint8_t addr)
{
  uint8_t ei = EP_HW_NUM(addr);
  uint8_t flag;

  if(ei > USB_MAX_ENDPOINTS) {
    return;
  }

  flag = nvic_interrupt_en_save(NVIC_INT_USB);

  set_stall(addr, 1);

  nvic_interrupt_en_restore(NVIC_INT_USB, flag);
}

void
usb_arch_halt_endpoint(uint8_t addr, int halt)
{
  uint8_t ei = EP_HW_NUM(addr);
  uint8_t flag;
  usb_endpoint_t *ep = EP_STRUCT(addr);

  if(ei > USB_MAX_ENDPOINTS) {
    return;
  }

  if(!(ep->flags & USB_EP_FLAGS_ENABLED)) {
    return;
  }

  flag = nvic_interrupt_en_save(NVIC_INT_USB);

  if(halt) {
    ep->halted = 0x1;
    set_stall(addr, 1);
  } else {
    ep->halted = 0;
    set_stall(addr, 0);

    if(ep->buffer && (ep->buffer->flags & USB_BUFFER_HALT)) {
      ep->buffer->flags &= ~USB_BUFFER_SUBMITTED;
      if(ep->buffer->flags & USB_BUFFER_NOTIFY) {
        notify_ep_process(ep, USB_EP_EVENT_NOTIFICATION);
      }
      ep->buffer = ep->buffer->next;
    }
    if(ei) {
      out_ep_interrupt_handler(EP_HW_NUM(addr));
    }
  }

  nvic_interrupt_en_restore(NVIC_INT_USB, flag);
}

void
usb_arch_set_address(uint8_t addr)
{
  REG(USB_ADDR) = addr;
}

int
usb_arch_send_pending(uint8_t addr)
{
  uint8_t flag;
  uint8_t ret;
  uint8_t ei = EP_INDEX(addr);

  flag = nvic_interrupt_en_save(NVIC_INT_USB);

  REG(USB_INDEX) = ei;
  if(ei == 0) {
    ret = REG(USB_CS0) & USB_CS0_INPKT_RDY;
  } else {
    ret = REG(USB_CSIL) & USB_CSIL_INPKT_RDY;
  }

  nvic_interrupt_en_restore(NVIC_INT_USB, flag);

  return ret;
}
